# py-insightcyber

./: .gitignore  README.md  pyproject.toml
src/insightcyber/: __init__.py  api.py  cli.py
